# axum-askama-htmx

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  tailwind.config.js
public/: style.css
src/: main.rs  router.rs  templates.rs
src/handlers/: mod.rs  root.rs  todo.rs
src/templates/: hello.rs  mod.rs  todo.rs
templates/: base.html  hello.html  todo.html
